2004-08-25  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c (g_win32_get_windows_version): New
	function. Returns the Windows version code like GetVersion(),
	except that one can pretend to be running on Win9x by setting the
	G_WIN32_PRETEND_WIN9X environment variable. This is mainly for
	debugging purposed.

	* glib/gwin32.h: Declare it. Define macros G_WIN32_WINDOWS_IS_NT_BASED 
	and G_WIN32_HAVE_WIDECHAR_API to test Windows features at run-time.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Post-release version bump.

	* === Released 2.5.2 ===

Wed Aug 25 00:25:08 2004  Matthias Clasen  <maclas@gmx.de>

	* NEWS: Update for 2.5.2

2004-08-25  Tor Lillqvist  <tml@iki.fi>

	Win32 equivalences of the XDG folders
	
	* glib/gutils.c (get_special_folder): New function, calls
	SHGetSpecialFolderLocation() to get path to places like the My
	Documents folder.
	(g_get_any_init): Use CSIDL_PROFILE as HOME if not
	overridden by env vars.
	(g_get_user_data_dir): Use CSIDL_PERSONAL.
	(g_get_user_config_dir): Use CSIDL_APPDATA.
	(g_get_user_cache_dir): Use CSIDL_INTERNET_CACHE. Debatable...
	(g_get_system_data_dirs): Use CSIDL_COMMON_APPDATA and
	CSIDL_COMMON_DOCUMENTS.
	(g_get_system_config_dirs): Use CSIDL_COMMON_APPDATA.

	* configure.in: Add -lole32 to G_LIBS_EXTRA for mingw.

	* glib/glib.def: Add the new functions.

Mon Aug 23 16:16:35 2004  Manish Singh  <yosh@gimp.org>

	* glib/goption.c (g_option_group_add_entries): remove unused
	variable.

Mon Aug 23 01:35:18 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.c (g_get_user_cache_dir): 
	* glib/gutils.c (g_get_user_config_dir): 
	* glib/gutils.c (g_get_user_data_dir): Don't call g_get_home_dir()
	while holding the g_utils_global lock, simply use g_home_dir. 
	(#150695, Jody Goldberg)

2004-08-21  Tor Lillqvist  <tml@iki.fi>

	* glib/giowin32.c (g_io_win32_finalize): Tell select_thread to
	break out of its loop. Prevents a thread leak. (#147392, Peter
	Zelezny)
