@@ -1,3 +1,7 @@
+2004-08-26  Tor Lillqvist  <tml@iki.fi>
+
+	* tests/testglib.c (main): Test the new XDG basedir functions.
+
 2004-08-25  Tor Lillqvist  <tml@iki.fi>
 
 	* glib/gwin32.c (g_win32_get_windows_version): New
